# UniDec

./: .gitignore  pyproject.toml  readme.md
unidec/src/: linux_apt_dependencies.txt  linux_apt_deps.txt  linux_dnf_deps.txt
