[project]
name = "UniDec"
description = "Universal deconvolution of mass and ion mobility spectra."
version = "6.1.3"
authors = [
	{name = "Michael Marty", email="mtmarty@utexas.edu"},
]
readme = "readme.md"
requires-python = ">=3.13"
license = "BSD-4-Clause"
license-files =	[
	"LICENSE",
	"unidec/UniDecImporter/Waters/Waters_MassLynxSDK_EULA.txt",
	"unidec/UniDecImporter/Thermo/RawFileReaderLicense.doc",
]
classifiers = [
	"Intended Audience :: Scientists",
	"Programming Language :: Python :: 3",
]
dependencies = [
	'attrdict',
	'attrdict3',
	'contourpy',
	'cycler',
	'fonttools',
	'h5py',
	'Jinja2',
	'kiwisolver',
	'llvmlite',
	'lxml',
	'lxml_html_clean',
	'MarkupSafe',
	'matplotlib',
	'mpld3',
	'natsort',
	'networkx',
	'numba',
	'numpy>= 2.2.6',
	'packaging',
	'pandas',
	'pillow',
	'plotly >= 6.1.2',
	'pubsub',
	'pymzml',
	'pyparsing',
	'Pypubsub',
	'pyteomics',
	'python-dateutil',
	'pythonnet; os_name == "nt"',
	'pytz',
	'regex',
	'scipy',
	'setuptools',
	'six',
	'tenacity',
	'tzdata',
	'wxPython',
]

[project.optional-dependencies]
img = ['pyimzml']


[tool.setuptools.package-dir]
unidec = "unidec"

[project.gui-scripts]
gunidec = "unidec.Launcher:__main__"

[project.scripts]
unidec = "unidec.engine:__main__"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
unidec = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
    ".",
]
