[project]
name = "UniDec"
description = "Universal deconvolution of mass and ion mobility spectra."
version = "6.1.3"
authors = [
	{name = "Michael Marty", email="mtmarty@utexas.edu"},
]
readme = "readme.md"
requires-python = ">=3.13" # version tested in 8.0.3
license = "BSD-4-Clause"
license-files =	[
	"LICENSE",
	"unidec/UniDecImporter/Waters/Waters_MassLynxSDK_EULA.txt",
	"unidec/UniDecImporter/Thermo/RawFileReaderLicense.doc",
]
classifiers = [
	"Intended Audience :: Scientists",
	"Programming Language :: Python :: 3",
]
dependencies = [
	# GUI
	'wxPython',		# GUI library
	# array processing
	'numba',		# accelerated arrays
	'numpy>= 2.2.6',	# base array lib
	'pandas',		# Dataframes
	'scipy',		# Scienfitic computing tools
	# algorithms and compute facilities
	'contourpy',		# calculate curve contours
	'kiwisolver',		# Cassowary constraint solver
	'networkx',		# graph generator
	'pyparsing',		# grammatical parser
	# File handling
	'hdf5plugin',		# accelerates psims
	'h5py',			# handle hdf5 files
	'lxml',			# handle XML files
	'lxml_html_clean',	# cleanup XML for use in HTML
	'MarkupSafe',		# safe insertion of text into HTML
	'mpld3',		# handle D3/json plot objects
	'pymzml',		# handle mzml files
	'pythonnet; os_name == "nt"', # install dotnet/dll compat for windows only
	# Display
	'cycler',		# aux to matplotlib
	'fonttools',		# handle font files
	'matplotlib',		# plotting
	'plotly >= 6.1.2',	# plotting -> used when?
	'pillow',		# Image processing
	# Bio tools
	'pyteomics',		#
	# Python utilities
	'attrdict', 		# attr access for python dicts
	'attrdict3',		# attr access for python dicts
	'Jinja2',		# templating engine
	'python-dateutil',	# time/date handling
	'pytz',			# timezone handling
	'regex',		# alternative to stdlib 're'
	'setuptools',		# build environment, not necessary for pyproject
	'packaging',		# core utilities for pkg, not needed for pyproject
	'six',			# python2 compatibility
	'tzdata',		# Timezone data
	'tenacity',		# retry functionality
	# Misc
	'llvmlite',		# compiler for Numba
	'natsort',		# changes string sort order
	'pubsub',		# ? seems to be MPI -> used
	'Pypubsub',		# implements MPI -> not used
]

[project.optional-dependencies]
# install with <installer> install '.[opt-dependency group]'
img = ['pyimzml']
exp = ['massql']

[tool.setuptools.package-dir]
# define the subdirectory (from the parent directory containing this pyproject
# file) to define as the root directory of the package.
unidec = "unidec"

[project.gui-scripts]
gunidec = "unidec.Launcher:__main__"

[project.scripts]
unidec = "unidec.engine:__main__"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
unidec = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
    ".",
]
